# learn_openGL

./: .gitignore  README.md  learn_openGL.jucer
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2017/: learn_openGL.sln  learn_openGL_App.vcxproj  learn_openGL_App.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Application.cpp  Application.h  CentralComponent.cpp  CentralComponent.h  CustomTimer.cpp  CustomTimer.h  MainForm.cpp  MainForm.h  Menu.cpp  Menu.h  OpenGLDrawer.cpp  OpenGLDrawer.h  Pair.h  Triple.h  main.cpp
Source/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: CMakeLists.txt  Makefile  main.cpp
src/cmake/: embed.cmake
src/core/: actor.h  animation.h  attribute.h  camera.cpp  camera.h  drawer.cpp  drawer.h  exception.h  image.h  image_resource_loader.cpp  image_resource_loader.h  index_buffer.h  indexer.h  keys.h  light.h  material.h  program.cpp  program.h  renderer.cpp  renderer.h  texture.cpp  texture.h  utils.cpp  utils.h  vertex_buffer.h  window.cpp  window.h
src/core/internal/: buffer.cpp  buffer.h  movable.h  resource.cpp  resource.h
src/embed/: source.cpp
src/lessons/: lesson1.4.cpp  lesson1.5.cpp  lesson1.6.cpp  lesson1.7.cpp  lesson1.8.cpp  lesson1.9.cpp  lesson1.cpp  lesson2.1.cpp  lesson2.2.cpp  lesson2.3.cpp  lesson2.4.cpp  lesson2.5.cpp  lesson2.6.cpp  primitives.h
src/lessons/helpers/: cube_lamp.cpp  cube_lamp.h  preset.h  primitives.h
